# HAWK-basestation

./: README
basestation/: mainpage.dox  manifest.xml  manifest.xml~  stage1.launch
ic2020_loop/: CMakeLists.txt
ic2020_loop/.svn/: all-wcprops  entries
ic2020_loop/src/: ic2020_loop.cpp
ic2020_optflow/: CMakeLists.txt  manifest.xml  optflow.launch  optflow.launch~  stage2.launch
ic2020_optflow/.svn/: all-wcprops  entries
ic2020_optflow/src/: ic2020_optflow.cpp
ic2020_render/: CMakeLists.txt  manifest.xml
ic2020_render/.svn/: all-wcprops  entries
ic2020_surf/: CMakeLists.txt  manifest.xml  surf.launch
ic2020_toro/: CMakeLists.txt  manifest.xml  toro.launch  toro.launch~
ic2020_vodom/: .project  CMakeLists.txt  manifest.xml
ic2020_vodom/.svn/: all-wcprops  entries
ic2020_vodom/.svn/text-base/: .cproject.svn-base
ic2020_vodom/msg/: keyframe.msg
ic2020_vodom/msg/.svn/: all-wcprops  entries
ic2020_vodom/msg/lisp/.svn/: all-wcprops  entries
ic2020_vodom/msg/lisp/ic2020_vodom/: ic2020_vodom-msg.asd
ic2020_vodom/msg/lisp/ic2020_vodom/.svn/: all-wcprops  entries
ic2020_vodom/msg/lisp/ic2020_vodom/.svn/text-base/: _package.lisp.svn-base  _package_keyframe.lisp.svn-base  keyframe.lisp.svn-base
ic2020_vodom/msg_gen/cpp/include/ic2020_vodom/: keyframe.h
ic2020_vodom/msg_gen/lisp/: _package.lisp  _package_keyframe.lisp  ic2020_vodom-msg.asd  keyframe.lisp
ic2020_vodom/src/: CameraParameters.cpp  CornerHelper.cpp  Vector3.cpp  Vector3.h  VisualOdometry.cpp  VisualOdometry.h  ic2020_vodom.cpp  pgicp.hpp  pgicp.hpp~
ic2020_vodom/src/.svn/: all-wcprops  entries
ic2020_vodom/src/.svn/text-base/: CameraParameters.h.svn-base  Constants.h.svn-base  CornerHelper.cpp.svn-base  CornerHelper.h.svn-base  Keyframe.cpp.svn-base  Keyframe.h.svn-base  SURFHelper.cpp.svn-base  SURFHelper.h.svn-base  VisualOdometry.cpp.svn-base  ic2020_vodom.cpp.svn-base
ic2020_vodom/src/ic2020_vodom/.svn/: all-wcprops  entries
ic2020_vodom/src/ic2020_vodom/msg/: __init__.py  _keyframe.py
netbench/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
(+100 files in other folders)
